Rework unit matching and match ranking